deploy/staging/env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fdk.service: data-service-catalog
  name: data-service-catalog
spec:
  template:
    spec:
      containers:
        - name: data-service-catalog
