deploy/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-service-catalog
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: '10'
    nginx.ingress.kubernetes.io/limit-burst-multiplier: '2'
    nginx.ingress.kubernetes.io/limit-whitelist: '10.0.0.0/8,35.228.50.2/32'
    nginx.ingress.kubernetes.io/server-snippet: |
      server_tokens off;
      location ~ ^/(ping|ready|prometheus) {
        deny all;
        return 404;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: data-service-catalog.api.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: data-service-catalog
                port:
                  number: 8080
            path: /
            pathType: Prefix
